tests/ui/control_path_local_cross_role.stderr
error[E0080]: evaluation panicked: local control messages require self-send
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::Message<hibana::global::LabelMarker<48>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopContinueKind>, hibana::substrate::cap::advanced::LoopContinueKind>, 0>::{constant#0}` failed here
  |
 ::: src/global.rs
  |
  |                     panic!("local control messages require self-send")
  |                     -------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_sendable_message::<M>();
  | |         if <M as MessageControlSpec>::IS_CONTROL {
  | |             let is_self_send = <<From as steps::RoleEq<To>>::Output as steps::Bool>::VALUE;
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<48>, GenericCapToken<LoopContinueKind>, LoopContinueKind>, 0>`
  --> tests/ui/control_path_local_cross_role.rs:5:13
   |
 5 |       let _ = g::send::<
   |  _____________^
 6 | |         g::Role<0>,
 7 | |         g::Role<1>,
 8 | |         g::Msg<48, GenericCapToken<LoopContinueKind>, LoopContinueKind>,
 9 | |         0,
10 | |     >();
   | |_______^
